  temporary assembly file is no longer left in the file system.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)

- #11866: Fix the result of `caml_read_directory()` on non-existent paths.
  (Andrei Paskevich and Charlène Gros, review by David Allsopp and
   Nicolás Ojeda Bär)

- #11879: Bugfix for Ctype.nondep_type
  (Stephen Dolan, review by Gabriel Scherer)

- #12004: Don't ignore function attributes on lambdas with locally abstract
  types.
  (Chris Casinghino, review by Gabriel Scherer)

- #12046: Flush stderr when tracing the parser
  (Hugo Heuzard, review by David Allsopp and Nicolás Ojeda Bär)

- #12061, #12063: don't add inconsistent equalities when computing
  high-level error messages for functor applications and inclusions.
  (Florian Angeletti, review by Gabriel Scherer)

- #12075: auto-detect whether `ar` support @FILE arguments at
  configure-time to avoid using this feature with toolchains
  that do not support it (eg FreeBSD/Darwin).
  (Nicolás Ojeda Bär, review by Xavier Leroy, David Allsop, Javier
  Chávarri, Anil Madhavapeddy)

- #12103, 12104: fix a concurrency memory-safety bug in Buffer
  (Gabriel Scherer, review by Florian Angeletti, report by Samuel Hym)

- #12112: Fix caml_callback{2,3}_exn when used with effect handlers.
  (Lucas Pluvinage, review by Gabriel Scherer, David Allsopp and Xavier Leroy)

- #12134: Use ghost location for nodes created when handling defaults in
  optional arguments.
  (Paul-Elliot Anglès d'Auriac, review by Gabriel Scherer)

- #12153: Fix segfault in bytecode programs involving recursive value
  definitions of values of size 0
  (Vincent Laviron, Xavier Leroy, Gabriel Scherer,
   review by Xavier Leroy, report by Nick Roberts)

- #12162: Fix miscompilation on amd64 backends involving integer overflows
  (Vincent Laviron and Greta Yorsh, review by Stefan Muenzel)

- #12170: fix pthread_geaffinity_np configure check for android
  (David Allsopp, review by Sébastien Hinderer)
