@@ -973,6 +973,9 @@ Some of those changes will benefit all OCaml packages.
 - #11879: Bugfix for Ctype.nondep_type
   (Stephen Dolan, review by Gabriel Scherer)
 
+- #11931: Fix tricky typing bug with type substitutions
+  (Stephen Dolan, review by Leo White and Jacques Garrigue)
+
 - #12004: Don't ignore function attributes on lambdas with locally abstract
   types.
   (Chris Casinghino, review by Gabriel Scherer)
